# actixweb-sqlx-sample

./: .env  Cargo.toml  docker-compose.yml
migrations/: 20211204064911_create_users.up.sql  20211218073251_create_posts.up.sql  20211225074418_create_users_and_posts.down.sql  20211225074418_create_users_and_posts.up.sql  20211230042837_create_tokens.down.sql  20211230042837_create_tokens.up.sql  20220101054448_add_on_delete_cascade_constraints.down.sql  20220101054448_add_on_delete_cascade_constraints.up.sql
src/: main.rs
src/auth/: mod.rs
src/post/: model.rs  routes.rs
src/token/: mod.rs
src/user/: model.rs  routes.rs
