[package]
name = "actixweb-sqlx-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
sqlx = { version = "0.4", features = [ "runtime-actix-native-tls" , "postgres" ] }
log = "0.4.8"
env_logger = "0.9.0"
dotenv = "0.15.0"